--- a/src/app/pages/user/dashboard/dashboard.page.scss
+++ b/src/app/pages/user/dashboard/dashboard.page.scss
@@ -51,7 +51,7 @@ app-dashboard {
 
   .empty-state {
     text-align: center;
-    padding-bottom: 10px;
+    padding: 10px;
 
     & img {
       display: block;
