--- a/src/app/pages/manage/designsystem/designsystem.page.html
+++ b/src/app/pages/manage/designsystem/designsystem.page.html
@@ -245,7 +245,7 @@
             </ion-slides>
             <ion-grid *ngIf="platform.width() >= 768">
               <ion-row class="ion-justify-content-start">
-                <ion-col class="ion-align-self-center grid-col" size="auto">
+                <ion-col class="ion-align-self-center" size="auto">
                   <ion-card class="grid-program-card">
                     <ion-card-header class="ion-no-padding">
                       <div class="program-photo-container">
@@ -255,7 +255,7 @@
                     <div class="program-name">Object 1</div>
                   </ion-card>
                 </ion-col>
-                <ion-col class="ion-align-self-center grid-col" size="auto">
+                <ion-col class="ion-align-self-center" size="auto">
                   <ion-card class="grid-program-card">
                     <ion-card-header class="ion-no-padding">
                       <div class="program-photo-container">
@@ -298,7 +298,7 @@
             </ion-slides>
             <ion-grid *ngIf="platform.width() >= 768">
               <ion-row class="ion-justify-content-start">
-                <ion-col class="ion-align-self-center grid-col" size="auto">
+                <ion-col class="ion-align-self-center" size="auto">
                   <ion-card class="grid-program-card">
                     <ion-card-header class="ion-no-padding">
                       <div class="program-photo-container">
@@ -308,7 +308,7 @@
                     <div class="program-name">Object 1</div>
                   </ion-card>
                 </ion-col>
-                <ion-col class="ion-align-self-center grid-col" size="auto">
+                <ion-col class="ion-align-self-center" size="auto">
                   <ion-card class="grid-program-card">
                     <ion-card-header class="ion-no-padding">
                       <div class="program-photo-container">
@@ -371,7 +371,7 @@
             </ion-slides>
             <ion-grid *ngIf="platform.width() >= 768">
               <ion-row class="ion-justify-content-start">
-                <ion-col class="ion-align-self-center grid-col" size="auto">
+                <ion-col class="ion-align-self-center" size="auto">
                   <ion-card class="grid-program-card">
                     <ion-card-header class="ion-no-padding">
                       <div class="program-photo-container">
@@ -381,7 +381,7 @@
                     <div class="program-name">Object 1</div>
                   </ion-card>
                 </ion-col>
-                <ion-col class="ion-align-self-center grid-col" size="auto">
+                <ion-col class="ion-align-self-center" size="auto">
                   <ion-card class="grid-program-card">
                     <ion-card-header class="ion-no-padding">
                       <div class="program-photo-container">
@@ -391,7 +391,7 @@
                     <div class="program-name">Object 2</div>
                   </ion-card>
                 </ion-col>
-                <ion-col class="ion-align-self-center grid-col" size="auto">
+                <ion-col class="ion-align-self-center" size="auto">
                   <ion-card class="grid-program-card">
                     <ion-card-header class="ion-no-padding">
                       <div class="program-photo-container">
@@ -401,7 +401,7 @@
                     <div class="program-name">Object 3</div>
                   </ion-card>
                 </ion-col>
-                <ion-col class="ion-align-self-center grid-col" size="auto">
+                <ion-col class="ion-align-self-center" size="auto">
                   <ion-card class="grid-program-card">
                     <ion-card-header class="ion-no-padding">
                       <div class="program-photo-container">
