--- a/src/app/pages/feature/manage/feature-schedule/feature-schedule.page.html
+++ b/src/app/pages/feature/manage/feature-schedule/feature-schedule.page.html
@@ -78,6 +78,18 @@
       <ion-label style="width: 90%" class="ion-margin-left" slot="start">Repeat Interval</ion-label>
       <ion-input style="width: 10%; text-align: right" margin-left="20px" type="number" [placeholder]="1" [max]="200" [(ngModel)]="schedule.options.recurrenceInterval" slot="end"></ion-input>
     </ion-item>
+    <ion-item lines="none" *ngIf="schedule.options.recurrence && schedule.options.recurrence === 'weekly'">
+      <ion-label style="width: 90%" class="ion-margin-left" slot="start">Days of the Week</ion-label>
+      <ion-select [(ngModel)]="recurrenceByDay" slot="end" [multiple]="true">
+        <ion-select-option value='MO'>Monday</ion-select-option>
+        <ion-select-option value='TU'>Tuesday</ion-select-option>
+        <ion-select-option value='WE'>Wednesday</ion-select-option>
+        <ion-select-option value='TH'>Thursday</ion-select-option>
+        <ion-select-option value='FR'>Friday</ion-select-option>
+        <ion-select-option value='SA'>Saturday</ion-select-option>
+        <ion-select-option value='SU'>Sunday</ion-select-option>
+      </ion-select>
+    </ion-item>
     <ion-row class="ion-justify-content-center">
       <ion-button (click)="touchSchedule('create schedule')" *ngIf="!this.schedule._id">
         <span>Create Schedule</span>
@@ -103,7 +115,8 @@
         <!--<span class="moment-input" *ngIf="calendaritem.moment._id">{{calendaritem.title}}</span>-->
         <ion-buttons slot="end" class="ion-no-margin">
           <ion-button fill="clear" color="grey" (click)="openContent($event, calendaritem)"><ion-icon name="open-outline"></ion-icon></ion-button>
-          <ion-button fill="clear" color="grey" (click)="openChildActivity($event, calendaritem.moment, 'edit')" *ngIf="calendaritem.moment.user_list_2 && calendaritem.moment.user_list_2.includes(userData.user._id)"><ion-icon name="cog"></ion-icon></ion-button>
+          <ion-button fill="clear" [color]="calendaritem.moment.user_list_2 && calendaritem.moment.user_list_2.includes(userData.user._id) ? 'grey' : 'lightgrey'" (click)="openChildActivity($event, calendaritem.moment, 'edit')" *ngIf="calendaritem.moment.user_list_2 && calendaritem.moment.user_list_2.includes(userData.user._id) || ['owner', 'admin', 'staff'].includes(userData.user.role)"><ion-icon name="cog"></ion-icon></ion-button>
+          <!--<ion-button fill="clear" color="grey" (click)="openChildActivity($event, calendaritem.moment, 'edit')" *ngIf="calendaritem.moment.user_list_2 && calendaritem.moment.user_list_2.includes(userData.user._id)"><ion-icon name="cog"></ion-icon></ion-button>-->
           <ion-button fill="clear" (click)="removeTimelineItem($event, programId, calendaritem)" class="close-button" *ngIf="calendaritem._id"><ion-icon name="trash" color="grey"></ion-icon></ion-button>
         </ion-buttons>
       </ion-item>
@@ -135,6 +148,16 @@
               <div class="program-name dark">Add</div>
             </ion-card>
           </ion-col>
+          <!--<ion-col class="ion-align-self-center" size="auto">
+            <ion-card class="program-card" (click)="chooseContent({ _id: '5f08b9e831a2da27ef50bc78' })">
+              <ion-card-header class="ion-no-padding" color="lightgrey">
+                <ion-row class="program-photo-container ion-justify-content-center ion-align-items-center">
+                  <ion-icon name="add" color="darkgrey"></ion-icon>
+                </ion-row>
+              </ion-card-header>
+              <div class="program-name dark">Content Placeholder</div>
+            </ion-card>
+          </ion-col>-->
           <ion-col class="ion-align-self-center" *ngFor="let content of activities; index as i" size="auto" [hidden]="!((content.matrix_string[0][0].toLowerCase().indexOf(searchKeyword.toLowerCase()) > -1 || content.resource['en-US'].value[0].toLowerCase().indexOf(searchKeyword.toLowerCase()) > -1))">
             <ion-card class="program-card" (click)="defaultContentAction($event, content)">
               <ion-card-header class="ion-no-padding">
@@ -160,12 +183,12 @@
         <ion-item *ngFor="let content of schedule.child_moments; let j = index;">
           <ion-reorder slot="start" class="ion-no-margin"><ion-icon name="menu" color="grey"></ion-icon></ion-reorder>
           <div class="content-count">{{j+1}}.</div>
-          <ion-badge class="ion-margin-end">{{content.resource['en-US'].value[0]}}</ion-badge>
-          <ion-input class="moment-input" type="text" [(ngModel)]="content.matrix_string[0][0]" [hidden]="content._id"></ion-input>
-          <span class="moment-input" *ngIf="content._id">{{content.matrix_string[0][0]}}</span>
+          <ion-badge class="ion-margin-end" *ngIf="content.resource">{{content.resource['en-US'].value[0]}}</ion-badge>
+          <!--<ion-input class="moment-input" type="text" [(ngModel)]="content.matrix_string[0][0]" [hidden]="content._id"></ion-input>-->
+          <span class="moment-input" *ngIf="content.matrix_string">{{content.matrix_string[0][0]}}</span>
           <ion-buttons slot="end" class="ion-no-margin">
             <ion-button fill="clear" color="grey" (click)="openChildActivity($event, content, 'view')"><ion-icon name="open-outline"></ion-icon></ion-button>
-            <ion-button fill="clear" color="grey" (click)="openChildActivity($event, content, 'edit')" *ngIf="content.user_list_2 && content.user_list_2.includes(userData.user._id)"><ion-icon name="cog"></ion-icon></ion-button>
+            <ion-button fill="clear" [color]="content.user_list_2 && content.user_list_2.includes(userData.user._id) ? 'grey' : 'lightgrey'" (click)="openChildActivity($event, content, 'edit')" *ngIf="content.user_list_2 && content.user_list_2.includes(userData.user._id) || ['owner', 'admin', 'staff'].includes(userData.user.role)"><ion-icon name="cog"></ion-icon></ion-button>
             <ion-button fill="clear" (click)="removeContent($event, j)" class="close-button"><ion-icon name="trash" color="grey"></ion-icon></ion-button>
           </ion-buttons>
         </ion-item>
