clone Goal responses
1.8.15 (1)

--- a/src/app/pages/feature/manage/feature-schedule/feature-schedule.page.scss
+++ b/src/app/pages/feature/manage/feature-schedule/feature-schedule.page.scss
@@ -147,4 +147,15 @@ app-feature-schedule {
   .message-label {
     margin: 0 auto;
   }
+
+  .goal-content {
+    background: var(--ion-color-secondary);
+    margin-left: 15px;
+  }
+
+  .more-goal-options {
+    position: absolute;
+    top: 5px;
+    right: 15px;
+  }
 }
